--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/BE_2505/DesignTimeBuild/.dtbcache.v2
+*.vsidx
+/.vs/BE_2505/v17/.futdcache.v1
+/.vs/ProjectEvaluation/be_2505.metadata.v2
+/.vs/ProjectEvaluation/be_2505.projects.v2
