--- a/ConsoleApp_NetFrameWork/ConsoleApp_NetFrameWork.csproj
+++ b/ConsoleApp_NetFrameWork/ConsoleApp_NetFrameWork.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Compile Include="BaiSo24.cs" />
     <Compile Include="DataTooLongExeption.cs" />
+    <Compile Include="GenericClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
