--- a/BE_2505.DataAccess/BE_2505.DataAccess.csproj
+++ b/BE_2505.DataAccess/BE_2505.DataAccess.csproj
@@ -41,8 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DALImpl\DeveloperDALImpl.cs" />
+    <Compile Include="DALImpl\LaoCongDALImpl.cs" />
     <Compile Include="DALImpl\StudentManager.cs" />
+    <Compile Include="DAL\DeveloperDAL.cs" />
+    <Compile Include="DALImpl\EconomicStudentDAL.cs" />
+    <Compile Include="DAL\IAttendanceDAL.cs" />
     <Compile Include="DAL\IStudentDAL.cs" />
+    <Compile Include="DAL\IStudy.cs" />
+    <Compile Include="DALImpl\ITStudentDALImpl.cs" />
+    <Compile Include="DAL\LaoCongDAL.cs" />
+    <Compile Include="DTO\ClassA.cs" />
+    <Compile Include="DTO\ClassB.cs" />
     <Compile Include="DTO\Employeer.cs" />
     <Compile Include="DTO\Ipad.cs" />
     <Compile Include="DTO\MayIPad.cs" />
