--- a/WebMVC_NetCore/WebMVC_NetCore.csproj
+++ b/WebMVC_NetCore/WebMVC_NetCore.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BE_2505.DataAccess.Netcore\BE_2505.DataAccess.Netcore.csproj" />
   </ItemGroup>
 
