--- a/BE_2505_NetCoreAPI/appsettings.json
+++ b/BE_2505_NetCoreAPI/appsettings.json
@@ -6,10 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MyConn": "DataSource=113.233"
-  },
+  
   "URL": {
     "Root": "http://locahost:1234"
+  },
+  "ConnectionStrings": {
+    "ConnStr": "Data Source=DESKTOP-IFRSV3F;Initial Catalog=BE_2505_DB;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;TrustServerCertificate=True"
   }
+
 }
