--- a/BE_2505_NetCoreAPI/appsettings.json
+++ b/BE_2505_NetCoreAPI/appsettings.json
@@ -6,12 +6,20 @@
     }
   },
   "AllowedHosts": "*",
-  
+
   "URL": {
     "Root": "http://locahost:1234"
   },
   "ConnectionStrings": {
     "ConnStr": "Data Source=DESKTOP-IFRSV3F;Initial Catalog=BE_2505_DB;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;TrustServerCertificate=True"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "xiuIq0Sx&UDHsMaLr*EO|}ijsJPBRc7LlWlJSzz4Uz5yGFHSsZZk2sJodDQK",
+    "TokenValidityInMinutes": 1,
+    "RefreshTokenValidityInDays": 7
   }
+
 
 }
