--- a/BE_2505_NetCoreAPI/BE_2505_NetCoreAPI.csproj
+++ b/BE_2505_NetCoreAPI/BE_2505_NetCoreAPI.csproj
@@ -17,12 +17,14 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.33" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.33" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.3.12" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Images\" />
+    <Folder Include="logs\" />
   </ItemGroup>
 
   <ItemGroup>
