--- a/BE_2505_NetCoreAPI/BE_2505_NetCoreAPI.csproj
+++ b/BE_2505_NetCoreAPI/BE_2505_NetCoreAPI.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\BE_2505.Common.Netcore\BE_2505.Common.Netcore.csproj" />
     <ProjectReference Include="..\BE_2505.DataAccess.Netcore\BE_2505.DataAccess.Netcore.csproj" />
   </ItemGroup>
